removed blocker critical high priority sonar issue